# VibeTrace

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: USAGE.md
examples/: demo_agent.py
tests/: test_tracer.py
vibetrace/: __init__.py  cli.py
vibetrace-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json
vibetrace-desktop/.github/workflows/: release.yml
vibetrace-desktop/src/: App.tsx  api.ts  styles.css
vibetrace-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vibetrace-desktop/src-tauri/src/: analyst.rs  commands.rs  events.rs  http_api.rs  lib.rs  main.rs  store.rs  tracer.rs
vibetrace-desktop/src/lib/: format.ts
vibetrace/analyst/: __init__.py  analyst.py
vibetrace/core/: __init__.py  context.py  events.py  tracer.py
vibetrace/dashboard/: __init__.py  app.py
vibetrace/integrations/: __init__.py  anthropic.py
vibetrace/storage/: __init__.py  sqlite_store.py
